# python-project-template

./: pyproject.toml
.devcontainer/: devcontainer.json
